# service_tunnel_for_dsm

./: README.md  SERVICES.md  config.py  gitea.sh  install.sh  pyproject.toml  reconfigure.py  refresh_tunnels.py  service_tunnel.sh  ssh.sh  test_tunnel.conf  tunnel_3770_code1.conf  tunnel_3770_code2.conf  tunnel_3770_code3.conf  tunnel_3770_code4.conf  tunnel_3770_code5.conf  tunnel_3770_coder1.conf  tunnel_3770_coder2.conf  tunnel_3770_coder3.conf  tunnel_3770_coder4.conf  tunnel_3770_coder5.conf  tunnel_3770_rdp.conf  tunnel_3770_ssh.conf  tunnel_ds216j_drive.conf  tunnel_ds216j_dsm_http.conf  tunnel_ds216j_dsm_https.conf  tunnel_ds216j_gitea_ssh.conf  tunnel_ds216j_gitea_web.conf  tunnel_ds216j_mariadb.conf  tunnel_ds216j_ssh.conf  tunnel_ds216j_web.conf  tunnel_dsm.conf  tunnel_gcp.sh  tunnel_git.conf  tunnel_gitea.conf  tunnel_rdp.conf  tunnel_ssh.conf  tunnel_template.sh  tunnel_vegssh.conf  tunnel_vmwc.conf  (+3 more)
script/: create.py  refresh.py
scripts/: remove.py
templates/: service_tunnel.sh
