[tool.poetry]
name = "service_tunnel_for_dsm"
version = "0.1.0"
description = "Manage SSH tunnels for exposing services."
authors = ["Pin Lin <moneycat711@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
autopep8 = "^1.5"
rope = "^0.16.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
